kubernetes/production/apps/observability/kube-prometheus-stack/app/ingress-route-alert.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: traefik.${SECRET_CLUSTER_LOCAL_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: alertmanager-operated
          port: 9093
  tls:
    secretName: observability-certificate-secret-production
