kubernetes/production/apps/observability/kube-prometheus-stack/app/ingress-route-prometheus.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-dashboard
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: traefik.${SECRET_CLUSTER_LOCAL_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: observability-certificate-secret-production
